...
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
...

                    <ImageView
                        android:id="@+id/ivRotulo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <ImageView
                        android:id="@+id/ivFavorito"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/tvNombreDispositivo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/tvMarcaDispositivo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/tvCategoriaDispositivo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/tvPrecioDispositivo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/tvSeguridadDispositivo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/tvSostenibilidadDispositivo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/tvDescripcionTexto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/tvPositivoSeguridad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/tvNegativoSeguridad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/tvPositivoSostenibilidad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/tvNegativoSostenibilidad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
