...
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginTop="5dp"
                android:text="@string/filtros" />

            <SearchView
                android:id="@+id/svBuscador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:iconifiedByDefault="false">

            </SearchView>

        </LinearLayout>

        <ListView
            android:id="@+id/lvDispositivos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>

        <TextView
            android:id="@+id/tvErrorDispositivos"
...
