...
    <string name="sostenibilidad_text">Sostenibilidad:</string>
    <string name="cancelar">Cancelar</string>
    <string name="aplicar">Aplicar</string>
    <string name="ordenar">Ordenar:</string>
    <string-array name="categorias_array">
        <item>Todas</item>
        <item>Asistente Virtual</item>
        <item>Iluminacion</item>
        <item>Climatizacion</item>
        <item>Electrodomesticos Inteligentes</item>
        <item>Limpieza</item>
    </string-array>
    <string-array name="ordenar_array">
...
