<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_buscador"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/menu_buscador" />

        <item
            android:id="@+id/nav_escanear"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/menu_escanear" />

        <item
            android:id="@+id/nav_favoritos"
            android:icon="@android:drawable/star_off"
            android:title="@string/menu_favoritos" />

        <item
            android:id="@+id/nav_compartir"
            android:icon="@android:drawable/ic_menu_share"
            android:title="@string/menu_compartir" />

    </group>

</menu>